FreeBSD Foundation.

This file contains major changes to ports and the ports infrastructure.
Intended audience are ports committers, maintainers and other
developers. User oriented changes should be submitted for inclusion
in the release notes and/or placed into UPDATING.

All ports committers are allowed to commit to this file.

20131005:
AUTHOR: bdrewery@FreeBSD.org

  PATCHFILES now support an optional :-pX flag that notes which patch strip
  level to use. This allows multiple patches in 1 port to use different
  PATCH_DIST_STRIP values without changing PATCH_DIST_STRIP.

  Syntax: PATCHFILES= patch[:-pX][:distgroup]

20131003:
AUTHOR: bapt@FreeBSD.org

  New USES: scons, to handle properly the scons building system, this
  this also gives the scons packages user the ability to respect MAKE_JOBS.

20130924:
AUTHOR: bapt@FreeBSD.org

  Stage aware ports can now create package without the requirement from
  being root.
  If a port really needs root anyway it should add NEED_ROOT in its
  Makefile.

  For a port that needs special credential on files DO NOT RELY on
  chown in post-install section but rely on @own, @group in pkg-plist
  Be careful about rights on directories as pkg_install cannot store them
  they needs to be done via @exec chown.

20130923:
AUTHOR: bapt@FreeBSD.org

  The ports tree is now staged by default. With pkgng the sequence hasn't
  changed, the main difference is that creating package is now independent
  from installing it. With pkg_install, the package is now created first
  and make install, do install the package.

  New macros:
  - STAGEDIR: PATH to the directory where the port will be staged.
  - NO_STAGE: Keep the old behaviour of the ports tree (aka no staging area)

  Unsupported macro if NO_STAGE is not set:
  - MAN* with staging man page compression and handling of hardlinks and
  symlinks is automatically done in the stage. the manpages becomes then a
  "normal" plist files and should be tracked in pkg-plist.